@@ -1,5 +1,5 @@
 Libidn THANKS -- Acknowledgements.
-Copyright (C) 2002-2010 Simon Josefsson
+Copyright (C) 2002-2011 Simon Josefsson
 See the end for copying conditions.
 
 The punycode code was taken from the IETF IDN Punycode specification,
@@ -90,6 +90,7 @@ Sisyphus
 Jens Rehsack <jens.rehsack@bayerbbs.com>
 Dagobert Michelsen <dam@opencsw.org>
 Guenter Knauf <gk@gknw.de>
+Stepan Golosunov <stepan@golosunov.pp.ru>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
